--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/m690.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/m690.sdf.jinja
@@ -576,9 +576,11 @@
       parent_link = root,
       frame_rate = 30.0,
       hfov = 1.990252,
+      width = 1500,
+      height = 1200,
       noise = 0.007,
       x = 0,
-      y = 0.1,
+      y = 0.12,
       z = -0.22,
       roll = components.rad90,
       pitch = components.rad90,
