--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/x500.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/x500.sdf.jinja
@@ -991,32 +991,43 @@
       camera_frame_name = spawner_args['name'] + '/servo_camera_optical',
       sensor_base_frame_name = spawner_args['name'] + '/servo_camera',
       offset_pitch_link_x = 0.0,
-      offset_pitch_link_y = '7.605e-5',
+      offset_pitch_link_y = 0.0,
       offset_pitch_link_z = 0.0,
       offset_pitch_link_roll = 0.0,
       offset_pitch_link_yaw = 0.0,
       offset_pitch_link_pitch = 0.0,
-      offset_roll_link_x = 0.0966901,
-      offset_roll_link_y = 0.00200395,
-      offset_roll_link_z = -0.060549,
+      offset_roll_link_x = 0.0,
+      offset_roll_link_y = 0.0,
+      offset_roll_link_z = 0.0,
       offset_roll_link_roll = 0.0,
       offset_roll_link_yaw = 0.0,
       offset_roll_link_pitch = 0.0,
+      offset_yaw_link_x = 0.0966901,
+      offset_yaw_link_y = 0.00200395,
+      offset_yaw_link_z = -0.060549,
+      offset_yaw_link_roll = 0.0,
+      offset_yaw_link_yaw = 0.0,
+      offset_yaw_link_pitch = 0.0,
       tilt_update_rate = 30.0,
       min_pitch = -1.046,
       max_pitch = 1.57,
       min_roll = -0.6,
       max_roll = 0.6,
+      min_yaw = -14,
+      max_yaw = 314,
       max_pitch_rate = 0.2,
       max_roll_rate = 0.2,
+      max_yaw_rate = 0.2,
       camera_update_rate = 30,
       horizontal_fov = 1.92,
       img_width = 1920,
       img_height = 1080,
       compensate_tilt_roll = true,
       compensate_tilt_pitch = true,
+      compensate_tilt_yaw = true,
       pitch_link_mesh_file = siyi_camera_mesh_file,
       roll_link_mesh_file = '',
+      yaw_link_mesh_file = '',
       mesh_scale = '',
       spawner_args = spawner_args)
     }}
