fix servo camera - disable yaw compensation

--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/x500.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/x500.sdf.jinja
@@ -1013,8 +1013,8 @@
       max_pitch = 1.57,
       min_roll = -0.6,
       max_roll = 0.6,
-      min_yaw = -14,
-      max_yaw = 314,
+      min_yaw = -1.57,
+      max_yaw = 1.57,
       max_pitch_rate = 0.2,
       max_roll_rate = 0.2,
       max_yaw_rate = 0.2,
@@ -1024,7 +1024,7 @@
       img_height = 1080,
       compensate_tilt_roll = true,
       compensate_tilt_pitch = true,
-      compensate_tilt_yaw = true,
+      compensate_tilt_yaw = false,
       pitch_link_mesh_file = siyi_camera_mesh_file,
       roll_link_mesh_file = '',
       yaw_link_mesh_file = '',
