add servo macro parameters for f450, f550, m690, naki and t650

--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/naki.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/naki.sdf.jinja
@@ -665,37 +665,47 @@
 
     {# Servo camera {--> #}
     {{ components.servo_camera_macro(
-      parent = root,
+       parent = root,
       parent_frame_name = spawner_args['name'] + '/fcu',
-      camera_frame_name = spawner_args['name'] + '/servo_camera_optical',
-      sensor_base_frame_name = spawner_args['name'] + '/servo_camera',
+      frame_namespace = spawner_args['name'] + '/servo_camera',
       offset_pitch_link_x = 0.12928,
       offset_pitch_link_y = '7.605e-5',
       offset_pitch_link_z = -0.006051,
       offset_pitch_link_roll = 0.0,
       offset_pitch_link_yaw = 0.0,
       offset_pitch_link_pitch = 0.0,
-      offset_roll_link_x = 0.0966901,
-      offset_roll_link_y = 0.00200395,
-      offset_roll_link_z = -0.130549,
+      offset_roll_link_x = 0.0,
+      offset_roll_link_y = 0.0,
+      offset_roll_link_z = 0.0,
       offset_roll_link_roll = 0.0,
       offset_roll_link_yaw = 0.0,
       offset_roll_link_pitch = 0.0,
+      offset_yaw_link_x = 0.13,
+      offset_yaw_link_y = 0.00200395,
+      offset_yaw_link_z = -0.130549,
+      offset_yaw_link_roll = 0.0,
+      offset_yaw_link_yaw = 0.0,
+      offset_yaw_link_pitch = 0.0,
       tilt_update_rate = 30.0,
       min_pitch = -1.046,
       max_pitch = 1.57,
       min_roll = -0.6,
       max_roll = 0.6,
+      min_yaw = -1.57,
+      max_yaw = 1.57,
       max_pitch_rate = 0.2,
       max_roll_rate = 0.2,
+      max_yaw_rate = 0.2,
       camera_update_rate = 30,
       horizontal_fov = 1.92,
       img_width = 1920,
       img_height = 1080,
       compensate_tilt_roll = true,
       compensate_tilt_pitch = true,
+      compensate_tilt_yaw = false,
       pitch_link_mesh_file = sony_camera_mesh_file,
       roll_link_mesh_file = gimbal_mesh_file,
+      yaw_link_mesh_file = '',
       mesh_scale = '',
       spawner_args = spawner_args)
     }}
