Add 3-axis gimbal  (#14)
* added siyi_zt6_rgb_camera as servo_camera for x500 drone

* enhance servo camera macro with yaw functionality and update x500 parameters

* fix servo camera - disable yaw compensation

* refactor servo camera macro parameters for improved namespace handling

* add servo macro parameters for f450, f550, m690, naki and t650

* removed obsolete files and done cleanup

---------

Co-authored-by: Cristian Chitiva <cychitivav@unal.edu.co>
Co-authored-by: Cristian Chitiva <cristianchitiva7@gmail.com>

--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/m690.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/m690.sdf.jinja
@@ -505,35 +505,45 @@
     {{ components.servo_camera_macro(
       parent = root,
       parent_frame_name = spawner_args['name'] + '/fcu',
-      camera_frame_name = spawner_args['name'] + '/servo_camera_optical',
-      sensor_base_frame_name = spawner_args['name'] + '/servo_camera',
+      frame_namespace = spawner_args['name'] + '/servo_camera',
       offset_pitch_link_x = 0.0,
       offset_pitch_link_y = 0.0,
       offset_pitch_link_z = 0.0,
       offset_pitch_link_roll = 0.0,
       offset_pitch_link_yaw = 0.0,
       offset_pitch_link_pitch = 0.0,
-      offset_roll_link_x = 0.2,
+      offset_roll_link_x = 0.0,
       offset_roll_link_y = 0.0,
-      offset_roll_link_z = -0.1,
+      offset_roll_link_z = 0.0,
       offset_roll_link_roll = 0.0,
       offset_roll_link_yaw = 0.0,
       offset_roll_link_pitch = 0.0,
+      offset_yaw_link_x = 0.2,
+      offset_yaw_link_y = 0.0,
+      offset_yaw_link_z = -0.1,
+      offset_yaw_link_roll = 0.0,
+      offset_yaw_link_yaw = 0.0,
+      offset_yaw_link_pitch = 0.0,
       tilt_update_rate = 30.0,
       min_pitch = -1.57,
       max_pitch = 1.57,
       min_roll = -0.6,
       max_roll = 0.6,
+      min_yaw = -1.57,
+      max_yaw = 1.57,
       max_pitch_rate = 2.0,
       max_roll_rate = 2.0,
+      max_yaw_rate = 2.0,
       camera_update_rate = 30,
       horizontal_fov = 1.92,
       img_width = 1280,
       img_height = 720,
       compensate_tilt_roll = true,
       compensate_tilt_pitch = true,
+      compensate_tilt_yaw = false,
       pitch_link_mesh_file = '',
       roll_link_mesh_file = '',
+      yaw_link_mesh_file = '',
       mesh_scale = '',
       spawner_args = spawner_args)
     }}
